fix verify code keyboard on mobile phone

--- a/sass/_current.scss
+++ b/sass/_current.scss
@@ -27,7 +27,7 @@ textarea{
 	background-color: #fff;
 }
 
-input[type="text"],input[type="password"]{
+input[type="text"],input[type="password"],input[type="tel"]{
 	outline: none;
 	border: $BorderColor;
 	@include border-radius(4px);
@@ -1509,6 +1509,18 @@ h4{
 		}
 
 		& input[type=text]{
+			width: 100%;
+			padding: 0 10px;
+			height: 40px;
+			border: $BorderColor;
+			@include border-radius(4px);
+			background-color: #fff;
+			font-size: 1.5rem;
+			font-weight: bold;
+			margin-top: 1rem;
+		}
+
+		& input[type=tel]{
 			width: 100%;
 			padding: 0 10px;
 			height: 40px;
